/*
 * symbol_table.h Copyright 2026 Alwin Leerling dna.leerling@gmail.com
 *
 * This program is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 2 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 * MA 02110-1301, USA.
 */

#pragma once

#include <cstdint>
#include <optional>
#include <string>
#include <vector>
#include <array>

enum eSymbolKind { I_TARGET, SUBROUTINE, JUMP, INDEXED, COUNT };

struct DecodedSymbol
{
	uint16_t address;
	eSymbolKind kind;
};

class SymbolTable
{
public:
	SymbolTable() = default;

	void add( std::optional<DecodedSymbol> symbol );

	void sort_vectors();

	std::string get_label( uint16_t address ) const;
	std::vector<uint16_t> get_index_list( ) { return symbol_lists[INDEXED]; };

private:
	using ListArray = std::array<std::vector<uint16_t>, eSymbolKind::COUNT>;

	bool sorted = false;
	ListArray symbol_lists;
};
